[package]
name = "urun"
version = "0.1.0"
edition = "2021"
description = "CLI shim that picks the right Unity editor for each project"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
sysinfo = { version = "0.38", default-features = false, features = ["system"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
lto = true
strip = true
