[package]
name = "urun"
version = "0.1.1"
edition = "2021"
description = "CLI shim that picks the right Unity editor for each project"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "1.1.2"
dirs = "6.0.0"
sysinfo = { version = "0.38", default-features = false, features = ["system"] }
clap = { version = "4.6.1", features = ["derive"] }
thiserror = "2"
eyre = "0.6"
colored = "3"
inquire = "0.7"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
lto = true
strip = true
